# schoolduler

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  config.yaml  reflog.txt
data/: example-courses.json  schoolduler.db
debug/: params.json
debug/scripts/: generate_mockups.py
docs/: about_inputs.md
input/: random-schedule.json
scripts/: generate_mockups.py
src/: algen.rs  args.rs  db.rs  domain.rs  exts.rs  input.rs  lib.rs  log.rs  logging.rs  main.rs  school.rs  utils.rs  xlsx.rs
src/algen/: algorithm.rs  config.rs  encoding.rs  execution.rs  genes.rs  history.rs  joe.rs  mod.rs  parametrized.rs  params.rs  random.rs  solution.rs
src/algen/algorithm/: crossover_ops.rs  dispatch.rs  mutation_ops.rs
src/algen/parametrized/: algorithm.rs  chromosome.rs  config.rs  execution.rs  history.rs  params.rs
src/algen/solution/: crossover_ops.rs  dispatch.rs  fitness_ops.rs  mutation_ops.rs  select_ops.rs  theta.rs
src/algen/solution/crossover_ops/: tests.rs
src/algen/solutions/: mod.rs  theta.rs
src/domain/: log.rs  mod.rs  tests.rs
src/exts/: parallel_iter.rs
src/input/: mockups.rs
src/log/: comm.rs  handle.rs  logger.rs  tests.rs
src/logging/: comm.rs  handle.rs  logger.rs  tests.rs
src/school/: lessons.rs  tests.rs
src/utils/: bits.rs  eager.rs  error.rs  exts.rs  fs.rs  hash.rs  indexed.rs  log.rs  mod.rs  num.rs  probability.rs  rated.rs  rating.rs  ratio.rs  testing.rs  tests.rs  time.rs  units.rs  xlsx.rs
src/utils/bits/: mod.rs  tests.rs  unsigned.rs
src/utils/exts/: result.rs
src/utils/num/: tests.rs
(+21 files in other folders)
