[package]
name = "schoolduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.*", features = ["serde"]}
rand = "0.8.*"
num = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
once_cell = "1.12.*"
tap = "1.0.*"
itertools = "0.10.*"
derive_more = "0.99.*"
bitvec = "1.0.*"
rusqlite = { version = "0.27.*", features = ["bundled", "time"] }

[build-dependencies]
rusqlite = { version = "0.27.*", features = ["bundled", "time"] }