[package]
name = "schoolduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.*", features = ["serde", "serde-human-readable", "local-offset", "formatting", "macros" ]}
rand = "0.8.*"
num = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
once_cell = "1.12.*"
derive_more = "0.99.*"
bitvec = "1.0.*"
itertools = "0.10.*"
rayon = "1.5.*"
# TODO: consider bundling LLVM into application
xlsxwriter = "0.4.*"
clap = { version = "3.2.*", features = ["derive"] }

[features]
default = ["debug"]
debug = []